cambio titulo blog

--- a/Plantilla diseño sencillo DW ``blog´´.html
+++ b/Plantilla diseño sencillo DW ``blog´´.html
@@ -12,7 +12,7 @@
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">BLOG</h4>
+    <h4 class="logo">BLOG Sara</h4>
   </header>
   <!-- Hero Section -->
   <section class="intro">
