--- a/Colores CSS.CURSO HTML Y CSS.html
+++ b/Colores CSS.CURSO HTML Y CSS.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>Documento sin título</title>
-<link rel="stylesheet" href="css/estiloscss.css">
+<link rel="stylesheet" href="css/colores.css">
 	
 </head>
 
 <body>
 	
-	<h1 class="violeta">Esto es un encabezado</h1>
+	<h1 class="turquesa">Esto es un encabezado</h1>
 	<h1>
 		<p class="verde">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo aspernatur consequatur dolorem dicta, molestias unde tenetur, consequuntur natus doloribus ut provident commodi! Minus ad vitae, ipsa deleniti temporibus. Odit, amet.</p>
 
