adaptabilidad, boton, flexbox

--- a/navbar.html
+++ b/navbar.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav>
+        <button class="nav-boton">Menú</button>
         <a href="https://www.sarataboada.com/home" class="nav-enlace">Inicio</a>
 		<a href="https://www.sarataboada.com/about"class="nav-enlace">Sobre mí</a>
 		<a href="https://www.sarataboada.com/contact"class="nav-enlace">Contacto</a>
